add mange user ,add mange item,add user dashbord

--- a/Retail_Managment_WPF_UI/Retail_Managment_WPF_UI.csproj
+++ b/Retail_Managment_WPF_UI/Retail_Managment_WPF_UI.csproj
@@ -61,6 +61,15 @@
     <Compile Include="Views\LoginView.xaml.cs">
       <DependentUpon>LoginView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ManageItemView.xaml.cs">
+      <DependentUpon>ManageItemView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ManageUserView.xaml.cs">
+      <DependentUpon>ManageUserView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UserDashbordView.xaml.cs">
+      <DependentUpon>UserDashbordView.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -78,6 +87,18 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\LoginView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ManageItemView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ManageUserView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\UserDashbordView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
