--- a/Retail_Managment_WPF_UI/Retail_Managment_WPF_UI.csproj
+++ b/Retail_Managment_WPF_UI/Retail_Managment_WPF_UI.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BCrypt.Net-Next, Version=4.0.3.0, Culture=neutral, PublicKeyToken=1e11be04b6288443, processorArchitecture=MSIL">
+      <HintPath>..\packages\BCrypt.Net-Next.4.0.3\lib\net472\BCrypt.Net-Next.dll</HintPath>
+    </Reference>
     <Reference Include="BouncyCastle.Cryptography, Version=2.0.0.0, Culture=neutral, PublicKeyToken=072edcf4a5328938, processorArchitecture=MSIL">
       <HintPath>..\packages\BouncyCastle.Cryptography.2.3.1\lib\net461\BouncyCastle.Cryptography.dll</HintPath>
     </Reference>
@@ -109,7 +112,10 @@
     </ApplicationDefinition>
     <Compile Include="Services\CommonButtons.cs" />
     <Compile Include="Services\DbConnect.cs" />
+    <Compile Include="Services\Employee.cs" />
+    <Compile Include="Services\InventoryService.cs" />
     <Compile Include="Services\Login.cs" />
+    <Compile Include="Services\Product.cs" />
     <Compile Include="Views\AdminDashbordView.xaml.cs">
       <DependentUpon>AdminDashbordView.xaml</DependentUpon>
     </Compile>
@@ -118,6 +124,9 @@
     </Compile>
     <Compile Include="Views\LoginView.xaml.cs">
       <DependentUpon>LoginView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Admin_ManageEmployeesView.xaml.cs">
+      <DependentUpon>Admin_ManageEmployeesView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ManagerDashbordView.xaml.cs">
       <DependentUpon>ManagerDashbordView.xaml</DependentUpon>
@@ -134,6 +143,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Resources\Styles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\AdminDashbordView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -143,6 +156,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\LoginView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Admin_ManageEmployeesView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
